fix alignment of dice icon

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -56,7 +56,7 @@ input[type=search] {
   }
 
   .home, .shuffle {
-    width: 100px;
+    width: 120px;
   }
 
   .search {
@@ -81,7 +81,9 @@ input[type=search] {
 
   .shuffle {
     position: relative;
-    
+    flex-direction: row;
+    justify-content: flex-end;
+
     input {
       width: 60px;
       background: transparent;
